# Delft-E-Go-quadruped

./: README.md
Hardware_CAD/: bicyclebrakeadjustment.SLDPRT  (+3 more)
Software/unitree_ros/go1_rt_control/: CMakeLists.txt  package.xml
Software/unitree_ros/go1_rt_control/include/: Kinematics.cpp
Software/unitree_ros/go1_rt_control/src/: teleop_control.cpp
Software/unitree_ros/go1_rt_control/src/A1EKF/: A1BasicEKF.cpp  A1BasicEKF.h  state_estimator.cpp  state_estimator.h
Software/unitree_ros/go1_rt_control/src/A1Robotcontrol/: A1RobotControl.cpp  A1RobotControl.h
Software/unitree_ros/go1_rt_control/src/Filter/: butterworth_filter.cpp  butterworth_filter.h
Software/unitree_ros/go1_rt_control/src/QP/: QPBaseClass.cpp  QPBaseClass.h
Software/unitree_ros/go1_rt_control/src/Robotpara/: A1Params.h  robot_const_para_config.cpp  robot_const_para_config.h
Software/unitree_ros/go1_rt_control/src/kinematics/: Kinematics.cpp  Kinematics.h
Software/unitree_ros/go1_rt_control/src/servo_control/: servo.h
Software/unitree_ros/go1_rt_control/src/utils/: Utils.cpp  Utils.h
Software/unitree_ros/go1_rt_control/src/whole_body_dynamics/: dynmics_compute.cpp  dynmics_compute.h
Software/unitree_ros_to_real/unitree_legged_real/: CMakeLists.txt
Software/unitree_ros_to_real/unitree_legged_real/config/: config.yaml
Software/unitree_ros_to_real/unitree_legged_real/launch/: real.launch
Software/unitree_ros_to_real/unitree_legged_real/scripts/: TO_class_landing_motion.py  landing_motion_sub.py  python_pub.py  python_sub.py
Software/unitree_ros_to_real/unitree_legged_real/src/go1_cpp_open_source/src/: A1CtrlStates.h  A1RobotControl.cpp  ConvexMpc.h  GazeboA1ROS.cpp  GazeboA1ROS.h
Software/unitree_ros_to_real/unitree_legged_real/src/go1_cpp_open_source/src/test/: test_mpc.cpp  test_rotation.cpp
Software/unitree_ros_to_real/unitree_legged_real/src/go1_cpp_open_source/src/utils/: Utils.cpp  Utils.h
Software/unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/: control_Keyboard.cpp
Software/unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/A1EKF/: A1BasicEKF.cpp  A1BasicEKF.h  state_estimator.cpp  state_estimator.h
Software/unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/Filter/: butterworthLPF.h
Software/unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/Go1EKF/: Go1BasicEKF.cpp  Go1BasicEKF.h  state_estimator.cpp  state_estimator.h
Software/unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/Go1legKinematics/: Go1Kinematics.cpp  Go1Kinematics.h
Software/unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/QP/: QPBaseClass.cpp  QPBaseClass.h
Software/unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/Robotpara/: A1CtrlStates.h  Go1CtrlStates.h  Go1Params.h  robot_const_para_config.cpp  robot_const_para_config.h
Software/unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/Stateestimator/: Dob.h  ekf.cpp  ekf.h  state_estimator.cpp
Software/unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/body/: body.cpp  body.h
Software/unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/jumping_controller/: jumping_RL.cpp  jumping_RL.h
Software/unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/kinematics/: Kinematics.cpp  Kinematics.h
Software/unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/torque_control_servo/: torque_mode_udp.cpp  torque_mode_udp.h
Software/unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/utils/: Utils.h
Software/unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/whole_body_dynamics/: dynmics_compute.cpp  pinocchio_model.cpp  pinocchio_model.h
Software/unitree_ros_to_real/unitree_legged_real/src/mosek_nlp_kmp/: package.xml
Software/unitree_ros_to_real/unitree_legged_real/src/mosek_nlp_kmp/.kdev4/: mosek_nlp_kmp.kdev4
Software/unitree_ros_to_real/unitree_legged_real/src/mosek_nlp_kmp/src/: gait_nlp_kmp.cpp  mpc_cvxpy_fixed.py
Software/unitree_ros_to_real/unitree_legged_real/src/mosek_nlp_kmp/src/FORCEMPC_mit/: ConvexMpc.cpp  ConvexMpc.h  Go1CtrlStates.h
Software/unitree_ros_to_real/unitree_legged_real/src/mosek_nlp_kmp/src/KMP/: kmp.cpp  kmp.h  referdata_swing_faster.txt  referdata_swing_pos.txt  referdata_swing_pos_faster.txt  referdata_swing_pos_faster2.txt
Software/unitree_ros_to_real/unitree_legged_real/src/mosek_nlp_kmp/src/NLP/: MPCClass.cpp  MPCClass.h
Software/unitree_ros_to_real/unitree_legged_real/src/mosek_nlp_kmp/src/NLPRTControl/: MpcRTControlClass.cpp  MpcRTControlClass.h
Software/unitree_ros_to_real/unitree_legged_real/src/mosek_nlp_kmp/src/QP/: QPBaseClass.cpp
Software/unitree_ros_to_real/unitree_legged_real/src/mosek_nlp_kmp/src/hardware_jump/: README.html  cpg_solver.py  problem.pickle  setup.py
Software/unitree_ros_to_real/unitree_legged_real/src/mosek_nlp_kmp/src/utils/: Utils.cpp  Utils.h
Software_planner&controller/unitree_ros_to_real/unitree_legged_real/: .CMakeLists.txt.swp  CMakeLists.txt
Software_planner&controller/unitree_ros_to_real/unitree_legged_real/config/: config.yaml  config_ff_test.yaml
Software_planner&controller/unitree_ros_to_real/unitree_legged_real/src/Whole_body_dynamic/src/: gait_dynamic.cpp  gait_dynamic.h
Software_planner&controller/unitree_ros_to_real/unitree_legged_real/src/Whole_body_dynamic/src/utils/: Utils.cpp
Software_planner&controller/unitree_ros_to_real/unitree_legged_real/src/Whole_body_dynamic/src/whole_body_dynamics/: dynmics_compute.cpp  dynmics_compute.h
Software_planner&controller/unitree_ros_to_real/unitree_legged_real/src/exe/: position_mode.cpp  torque_mode.cpp  velocity_mode.cpp  walk_mode.cpp
Software_planner&controller/unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/: teleop_control.cpp
Software_planner&controller/unitree_ros_to_real/unitree_legged_real/src/go1_rt_control/src/Filter/: butterworthLPF.cpp  butterworth_filter.cpp  butterworth_filter.h
Software_planner&controller/unitree_ros_to_real/unitree_legged_real/src/mosek_nlp_kmp/src/: gait_nlp_kmp.cpp
(+98 files in other folders)
